<resources>
    <string name="app_name">WordleSolver</string>
    <string name="suggested_starting_word_lares">Suggested starting Word: lares</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="word">Word</string>
    <string name="refreshSymbol">↺</string>
    <string name="loading">Loading…</string>
    <string name="errorMessage">There was an error calculating results. Are your entries correct?</string>
    <string name="suggested_word_german">Suggested Word: rates</string>
    <string name="how_to_play">How to use me</string>
    <string name="rules"><![CDATA[Select the language in the dropdown menu on the top, currently only english and german are available.\n\nEnter the word you used on the left. Then enter the result of your entry on the right: grey -> 0, yellow -> 1, green -> 2. Then press submit and wait for the results.\n\nOn the bottom you find the suggested word by the bot and a list of the remaining words after your first entry.\n\nUse the \'↺\' symbol to restart.]]></string>
</resources>